added search functionality for getAll, where one can pass a name as an argument
